src/main/java/com/kshrd/autopilot/util/fileConfig/spring/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-name
spec:
  selector:
    app: d-label
  type: NodePort
  ports:
    - protocol: TCP
      port: d-port
      nodePort: s-nodeport
      targetPort: s-target-port
