src/main/java/com/kshrd/autopilot/util/fileConfig/spring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i-name
  namespace: cert-namespace
spec:
  rules:
    - host: i-domain
      http:
        paths:
          - pathType: Prefix
            path: i-path
            backend:
              service:
                name: service-name
                port:
                  number: service-port
